--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -1,25 +1,24 @@
-name: GitHub-Profile-3D-Contrib
+name: Generate 3D Contribution Graph
 
 on:
-  schedule: # 03:00 JST == 18:00 UTC
-    - cron: "0 18 * * *"
+  schedule:
+    - cron: "0 0 * * *"  # Executa uma vez por dia
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: generate-github-profile-3d-contrib
+    name: Generate 3D Contribution Graph
     steps:
-      - uses: actions/checkout@v4
-      - uses: yoshi389111/github-profile-3d-contrib@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          USERNAME: ${{ github.repository_owner }}
+      - uses: actions/checkout@v2
+      - uses: yoshi389111/github-profile-3d-contrib@0.7.0
+        with:
+          user_name: shimarrudz
+          theme: "night-green"
       - name: Commit & Push
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config --global user.email "vic.shima.vss@gmail.com"
+          git config --global user.name "shimarrudz"
           git add -A .
-          if git commit -m "generated"; then
-            git push
-          fi
+          git commit -m "update 3d profile"
+          git push
